WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133991
REGRESSION (
r167856
): Unable to log into HSBC app
https://bugs.webkit.org/show_bug.cgi?id=133991
Summary
REGRESSION (r167856): Unable to log into HSBC app
Daniel Bates
Reported
2014-06-17 12:36:54 PDT
Following <
http://trac.webkit.org/changeset/167856
> (
bug #132224
) we disallow "navigation to any URL that is invalid, except for JavaScript URLs, which need not be valid." A byproduct of this decision is that we no longer notify the WebKit client when preparing to navigate to a URL if that URL is invalid. The native portion of the HSBC app on iOS expects to be notified when navigating to any URL, including an invalid URL of the form hsbc://A=a&B=b). But we no longer notify it of such URLs because we disallow navigating to them as of <
http://trac.webkit.org/changeset/167856
>.
Attachments
Patch and layout tests
(17.96 KB, patch)
2014-06-17 12:40 PDT
,
Daniel Bates
ddkilzer
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2014-06-17 12:40:51 PDT
Created
attachment 233250
[details]
Patch and layout tests
Daniel Bates
Comment 2
2014-06-17 12:42:11 PDT
<
rdar://problem/17044839
>
David Kilzer (:ddkilzer)
Comment 3
2014-06-18 14:33:05 PDT
Comment on
attachment 233250
[details]
Patch and layout tests View in context:
https://bugs.webkit.org/attachment.cgi?id=233250&action=review
r=me
> LayoutTests/fast/loader/allow-redirect-to-invalid-url-using-javascript-expected.txt:11 > +Note, this test must be run in Dump Render Tree.
Nit: Usually we just say "DumpRenderTree". If you change it here, please change it in all the tests and expected results.
Daniel Bates
Comment 4
2014-06-18 14:49:24 PDT
(In reply to
comment #3
)
> > LayoutTests/fast/loader/allow-redirect-to-invalid-url-using-javascript-expected.txt:11 > > +Note, this test must be run in Dump Render Tree. > > Nit: Usually we just say "DumpRenderTree". If you change it here, please change it in all the tests and expected results.
Will substitute "DumpRenderTree" for "Dump Render Tree" in the included tests before landing.
Daniel Bates
Comment 5
2014-06-18 14:53:18 PDT
Committed
r170120
: <
http://trac.webkit.org/changeset/170120
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug