Source/WebCore/loader/NavigationScheduler.cpp
@@ -48,6 +48,7 @@
 #include "InspectorInstrumentation.h"
 #include "Page.h"
 #include "ScriptController.h"
+#include "Settings.h"
 #include "UserGestureIndicator.h"
 #include <wtf/CurrentTime.h>
 #include <wtf/Ref.h>
@@ -310,7 +311,7 @@ inline bool NavigationScheduler::shouldScheduleNavigation(const URL& url) const
         return false;
     if (protocolIsJavaScript(url))
         return true;
-    if (!url.isValid())
+    if (!url.isValid() && !m_frame.settings().allowNavigationToInvalidURL())
         return false;
     return NavigationDisablerForBeforeUnload::isNavigationAllowed();
 }
